misc alignment fixes

--- a/web/css/local.css
+++ b/web/css/local.css
@@ -166,3 +166,7 @@ main {
 .nav-bi-big {
 	font-size: 2rem;
 }
+
+.msgbox-bi-big {
+	font-size: 2rem;
+}
